<resources>
    <string name="app_name">dans_android</string>
    <string name="text_job_detail">JOB DETAIL</string>
    <string name="company_image">Company Image</string>
    <string name="company">Company</string>
    <string name="text_go_to_website"><u>Go To Website</u></string>
    <string name="text_job_spec">Job Specification</string>
    <string name="text_fulltime">Fulltime</string>
    <string name="text_title">Title</string>
    <string name="text_description">Description</string>
    <string name="text_job_list">JOB LIST</string>
    <string name="text_search">Search</string>
    <string name="text_button_show_filter">Button Show filter</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_apply_filter">Apply Filter</string>
    <string name="text_location">Location</string>
    <string name="text_account">ACCOUNT</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="url_not_available">URL Not Available</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="text_sign_in_with_google">Sign In With Google</string>
    <string name="or">OR</string>
    <string name="text_sign_fb">Continue with Facebook</string>
</resources>