<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white_50"
    tools:context=".ui.job.JobFragment">

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_job_list"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rounded_edit_text"
        android:drawableStart="@drawable/baseline_search_24"
        android:hint="@string/text_search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_show_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

    <ImageButton
        android:id="@+id/btn_show_filter"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_arrow_down"
        android:contentDescription="@string/text_button_show_filter"
        app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchEditText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/lytFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="view_filter, tv_fulltime, switchFullTime, tv_location, searchLocation, btn_filter"
        tools:visibility="visible" />

    <View
        android:id="@+id/view_filter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_button_outline_gray"
        app:layout_constraintBottom_toBottomOf="@+id/btn_filter"
        app:layout_constraintEnd_toEndOf="@+id/btn_filter"
        app:layout_constraintStart_toStartOf="@+id/tv_fulltime"
        app:layout_constraintTop_toTopOf="@+id/tv_fulltime" />

    <TextView
        android:id="@+id/tv_fulltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:text="@string/text_fulltime"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/searchEditText"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchFullTime"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_fulltime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_fulltime" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/text_location"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_fulltime"
        app:layout_constraintTop_toBottomOf="@+id/tv_fulltime" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/shape_edit_text"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_location"
        app:layout_constraintTop_toTopOf="@+id/tv_location" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_apply_filter"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLocation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvJobList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/loadingBarPagination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_filter"
        tools:listitem="@layout/item_job_list" />

    <ProgressBar
        android:id="@+id/loadingBarPagination"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/yellow_500"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/loadingItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/loadingBarPagination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_filter"
        tools:visibility="gone">

        <include
            android:id="@+id/shimmerItem"
            layout="@layout/layout_list_item_shimmer" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>