<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_fb_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_sign_fb"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:icon="@drawable/ic_facebook"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/tv_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeWidth="1dp" />

    <View
        android:id="@+id/divider_image"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:background="@color/grey"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_divider"
        app:layout_constraintEnd_toStartOf="@id/tv_divider"
        app:layout_constraintStart_toStartOf="@id/btn_fb_login"
        app:layout_constraintTop_toTopOf="@id/tv_divider" />

    <TextView
        android:id="@+id/tv_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/btn_google_login"
        app:layout_constraintEnd_toEndOf="@id/btn_fb_login"
        app:layout_constraintStart_toStartOf="@+id/btn_fb_login"
        app:layout_constraintTop_toBottomOf="@id/btn_fb_login" />

    <View
        android:id="@+id/divider_image2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:background="@color/grey"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_divider"
        app:layout_constraintEnd_toEndOf="@id/btn_fb_login"
        app:layout_constraintStart_toEndOf="@id/tv_divider"
        app:layout_constraintTop_toTopOf="@id/tv_divider" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_google_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:icon="@drawable/ic_google_logo"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_fb_login"
        app:layout_constraintStart_toStartOf="@id/btn_fb_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_divider"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>